@@ -199,6 +199,7 @@
     "itemizedlist",
     "jarr",
     "jbig",
+    "jblob",
     "jdimension",
     "jdouble",
     "jerr",
